--- a/src/styles.sass
+++ b/src/styles.sass
@@ -1,1 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
+
+body
+  background-image: url('assets/images/background.jpg')
+  background-size: cover
+  height: 100%
+  background-repeat: no-repeat
+  background-attachment: fixed
