--- a/src/app/app.component.sass
+++ b/src/app/app.component.sass
@@ -5,3 +5,8 @@ h1
   line-height: normal
   margin-top: 0.5em
   text-align: center
+
+.toolbar-full-width
+  width: 100%
+  display: flex
+  justify-content: space-around
