--- a/src/app/app.component.sass
+++ b/src/app/app.component.sass
@@ -1,3 +1,17 @@
+@mixin small-screen
+  @media only screen and (max-width: 1200px)
+    @content
+
+
+.app
+  margin: auto
+  width: 80%
+  transition: 500ms
+
+@include small-screen
+  .app
+    width: 100%
+
 h1
   color: white
   text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5)
@@ -10,3 +24,21 @@ h1
   width: 100%
   display: flex
   justify-content: space-around
+
+  a
+    min-width: 0
+    width: auto
+    min-height: 0
+    height: auto
+    padding: 1ex
+
+    &:hover, &:active
+      background-color: rgba(168, 164, 100, 0.2)
+
+    .country, .league
+      text-align: center
+      line-height: 90%
+
+    .league
+      color: darkgray
+
