Active link on toolbar

--- a/src/app/components/toolbar/toolbar.component.html
+++ b/src/app/components/toolbar/toolbar.component.html
@@ -1,6 +1,7 @@
 <mat-toolbar class="toolbar-full-width">
   <a *ngFor="let footballCountry of footballCountries"
      [id]="(footballCountry.name| lowercase) + 'Select'"
+     routerLinkActive="active-link"
      [routerLink]="'/'+(footballCountry.name | lowercase)"
      mat-button>
     <div class="country">
