--- a/src/app/components/toolbar/toolbar.component.sass
+++ b/src/app/components/toolbar/toolbar.component.sass
@@ -10,7 +10,7 @@
     height: auto
     padding: 1ex
 
-    &:hover, &:active
+    &:hover
       background-color: rgba(168, 164, 100, 0.2)
 
     .country, .league
@@ -18,5 +18,7 @@
       line-height: 90%
 
     .league
-      color: darkgray
+      color: rgb(32, 117, 0)
 
+.active-link
+  background-color: rgba(168, 164, 100, 0.6)
