--- a/src/app/components/not-found/not-found.component.html
+++ b/src/app/components/not-found/not-found.component.html
@@ -1,4 +1,7 @@
 <div>
   <h2>Are you lost?</h2>
-  <img src="assets/images/lost.png" alt="">
+  <div>
+    <img src="assets/images/lost.png" alt="">
+  </div>
+  <a mat-raised-button [routerLink]="'/'">Yes</a>
 </div>
