Call service with fake data

--- a/src/app/components/league-details/league-details.component.html
+++ b/src/app/components/league-details/league-details.component.html
@@ -1,6 +1,6 @@
 <div *ngIf="isReady; else elseBlock" class="main">
   <foot-league-table
-    [data]="tableData">
+    [data]="tableData!">
   </foot-league-table>
 </div>
 
