--- a/src/app/components/league-details/league-table/league-table.component.html
+++ b/src/app/components/league-details/league-table/league-table.component.html
@@ -8,7 +8,7 @@
   </ng-container>
 
   <ng-container matColumnDef="name">
-    <th mat-header-cell *matHeaderCellDef></th>
+    <th mat-header-cell *matHeaderCellDef>Name</th>
     <td mat-cell *matCellDef="let element">
       <a [routerLink]="element.teamId">{{element.name}}</a>
     </td>
