--- a/src/app/components/not-found/not-found.component.sass
+++ b/src/app/components/not-found/not-found.component.sass
@@ -11,3 +11,12 @@ div
     img
       height: 350px
 
+  a
+    margin-top: 1em
+    animation: pulse 2s infinite
+
+@keyframes pulse
+  0%, 100%
+    transform: scale(1)
+  50%
+    transform: scale(1.5)
