Show error on error page

--- a/src/app/components/error/error.component.html
+++ b/src/app/components/error/error.component.html
@@ -3,5 +3,8 @@
   <div>
     <img src="assets/images/error.png" alt="">
   </div>
+  <div class="error-description">
+    {{errorDescription}}
+  </div>
   <a mat-raised-button [routerLink]="'/'">Main page</a>
 </div>
