Add back button

--- a/src/app/components/team-result/team-result.component.sass
+++ b/src/app/components/team-result/team-result.component.sass
@@ -16,6 +16,9 @@ div
       text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5)
       font-size: 3em
 
+  a
+    margin: 1em
+
 foot-loader
   display: flex
   justify-content: center
