--- a/src/app/components/team-result/team-result.component.html
+++ b/src/app/components/team-result/team-result.component.html
@@ -7,6 +7,7 @@
     [data]="tableData!"
     [teamName]="teamName!"
   ></foot-team-details-table>
+  <a mat-raised-button [routerLink]="'../'">Back</a>
 </div>
 
 <ng-template #elseBlock>
