--- a/src/app/components/toolbar/toolbar.component.sass
+++ b/src/app/components/toolbar/toolbar.component.sass
@@ -13,12 +13,26 @@
     &:hover
       background-color: rgba(168, 164, 100, 0.2)
 
-    .country, .league
-      text-align: center
-      line-height: 90%
 
-    .league
-      color: rgb(32, 117, 0)
+    div
+      display: flex
+      align-items: center
+
+      img
+        height: 25px
+        margin-right: 5px
+
+      div
+        display: flex
+        flex-direction: column
+        align-items: flex-start
+
+        .country, .league
+          text-align: center
+          line-height: 90%
+
+        .league
+          color: rgb(32, 117, 0)
 
 .active-link
   background-color: rgba(168, 164, 100, 0.6)
