--- a/src/app/app.component.sass
+++ b/src/app/app.component.sass
@@ -8,6 +8,11 @@
   width: 80%
   transition: 500ms
 
+  foot-loader
+    margin: 2em
+    display: flex
+    justify-content: center
+
 @include small-screen
   .app
     width: 100%
