--- a/src/app/components/league-details/league-details.component.html
+++ b/src/app/components/league-details/league-details.component.html
@@ -1,10 +1,6 @@
-<div *ngIf="isReady; else elseBlock" class="main">
+<div class="main">
   <foot-league-table
     [data]="tableData!">
   </foot-league-table>
 </div>
 
-
-<ng-template #elseBlock>
-  <foot-loader></foot-loader>
-</ng-template>
