Remove NgOptimizedImage usage and replace ngSrc with src attributes

--- a/src/app/components/loader/loader.component.html
+++ b/src/app/components/loader/loader.component.html
@@ -1,5 +1,5 @@
 <div>
-  <img ngSrc="assets/images/ball.svg" alt="" height="16" width="16">
-  <img ngSrc="assets/images/ball.svg" alt="" height="16" width="16">
-  <img ngSrc="assets/images/ball.svg" alt="" height="16" width="16">
+  <img src="assets/images/ball.svg" alt="" height="16" width="16">
+  <img src="assets/images/ball.svg" alt="" height="16" width="16">
+  <img src="assets/images/ball.svg" alt="" height="16" width="16">
 </div>
