--- a/src/styles.sass
+++ b/src/styles.sass
@@ -1,5 +1,5 @@
 body
-  background-image: url('assets/images/background.jpg')
+  background-image: url('assets/images/background2.webp')
   background-size: cover
   height: 100%
   background-repeat: no-repeat
