Remove fixed width attribute from not-found image tag

--- a/src/app/components/not-found/not-found.component.html
+++ b/src/app/components/not-found/not-found.component.html
@@ -1,7 +1,7 @@
 <div>
   <h2>Are you lost?</h2>
   <div>
-    <img src="assets/images/lost.png" alt="" height="857" width="685">
+    <img src="assets/images/lost.png" alt="" height="857">
   </div>
   <a mat-raised-button [routerLink]="'/'">Yes</a>
 </div>
