Refactor loader to use NgFor and update styles/animations

--- a/src/app/components/loader/loader.component.html
+++ b/src/app/components/loader/loader.component.html
@@ -1,5 +1,3 @@
 <div>
-  <img src="assets/images/ball.svg" alt="" height="16" width="16">
-  <img src="assets/images/ball.svg" alt="" height="16" width="16">
-  <img src="assets/images/ball.svg" alt="" height="16" width="16">
+  <img *ngFor="let _ of Array(6)" src="assets/images/ball.svg" alt="">
 </div>
